    -> 's' shortcut is now for "step", not "save"
  - "--disasm" option for selecting between UAE core and external CPU
    code dissassembler and setting output option flags for latter
  - Fix: when several breakpoints should have triggered
         on the same address, only first was handled
  - Fix: after breakpoint, 'c <n>' continues one instruction too little
  - Fix: info command crash (triggered on NetBSD)
  - Fix: disassember output bug on NetBSD (usigned char < -1 test)
  - Fix: info osheader and basebase subcommands under MiNT
  - Fix: debugger history duplicates removal
  - Fix: expression expanding CPU "pc" for DSP shortcut commands
  - Fix: expression expansion messing lines in command line history
  - Add ':quiet' option to breakpoints
  - Remote API debugger commands can also use expression expansion
  - Both single and double quotes can be used to mark expressions
  - In addition to text section offset, data and bss section offsets
    can be given when loading symbols (useful for Devpac symbols)
  - Output what value was set by options if it's not otherwise shown by UI
  - Show function arguments for GEMDOS Pexec() call and AES calls
    (for AES call values in intin array and strings in addrin array)
  - Add NVRAM read & write tracing
  - Support for the basic Native Features and --natfeats option to control it:
    http://wiki.aranym.org/natfeats/proposal

Windows specific changes:
- "-W" option added for opening a console window.  Like on all other platforms,
  "-D" will now just toggle CPU exception handling
- Fix: console stderr redirection fixed (used invalid "wr" mode)
- Fix: Windows localtime() not supporting dates before 1970 causes IKBD
  emulation crashes (wasn't problem with Cygwin, just with Mingw builds)

Tool updates:
- New hatari-profiler.py script for post-processing output from
  profiler's CPU and DSP profiling "save" commands:
	profile save <filename>
	dspprofile save <filename>